--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,5 +4,6 @@
     <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
-
+    <style name="label" parent="android:TextAppearance.Material.Caption"/>
+    <style name="text" parent="android:TextAppearance.Material.Subhead"/>
 </resources>
