--- a/app/src/main/res/layout/activity_peripherals.xml
+++ b/app/src/main/res/layout/activity_peripherals.xml
@@ -8,6 +8,7 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".Peripherals">
     <LinearLayout
+            android:id="@+id/advStatus"
             android:orientation="vertical"
             android:paddingTop="16dp"
             android:paddingBottom="16dp"
@@ -21,6 +22,25 @@
                 android:layout_height="wrap_content"/>
         <TextView
                 android:id="@+id/textView_advertisingStatus"
+                android:textAppearance="@style/text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/advStatus">
+        <TextView
+                android:text="@string/label_connectionStatus"
+                android:textAppearance="@style/label"
+                android:layout_marginBottom="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <TextView
+                android:id="@+id/textView_connectionStatus"
                 android:textAppearance="@style/text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
