--- a/app/src/main/res/layout/activity_peripherals.xml
+++ b/app/src/main/res/layout/activity_peripherals.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -9,6 +9,7 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".Peripherals">
     <TextView
+            android:id="@+id/label_advertisingStatus"
             android:text="@string/label_advertisingStatus"
             android:textAppearance="@style/label"
             android:layout_marginTop="16dp"
@@ -20,20 +21,59 @@
             android:textAppearance="@style/text"
             android:layout_marginBottom="16dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_below="@id/label_advertisingStatus"/>
 
     <TextView
+            android:id="@+id/label_connectionStatus"
             android:text="@string/label_connectionStatus"
             android:textAppearance="@style/label"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="8dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView_advertisingStatus"/>
     <TextView
             android:id="@+id/textView_connectionStatus"
             android:textAppearance="@style/text"
             android:layout_marginBottom="16dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_below="@id/label_connectionStatus"/>
 
-</LinearLayout>
+    <TextView
+            android:id="@+id/textView_serviceName"
+            android:text="@string/batteryService_name"
+            android:textAppearance="@style/subheader"
+            android:gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_below="@id/textView_connectionStatus"/>
+    <LinearLayout
+            android:id="@+id/batteryLevel"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView_serviceName">
+        <ImageView
+                android:id="@+id/imageView_batteryIcon"
+                android:src="@drawable/battery_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <SeekBar
+                android:id="@+id/seekBar_batteryLevel"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+        <EditText
+                android:id="@+id/textView_batteryLevel"
+                android:ems="3"
+                android:maxLength="3"
+                android:gravity="center"
+                android:inputType="number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+</RelativeLayout>
