--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,7 @@
     </style>
     <style name="label" parent="android:TextAppearance.Material.Caption"/>
     <style name="text" parent="android:TextAppearance.Material.Subhead"/>
+    <style name="subheader" parent="android:TextAppearance.Material.Body2">
+        <item name="android:textColor">#757575</item>
+    </style>
 </resources>
