--- a/app/src/main/res/drawable/battery_icon.xml
+++ b/app/src/main/res/drawable/battery_icon.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- ic_battery_std_48px.svg  https://github.com/google/material-design-icons -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="48dp"
         android:height="48dp"
