--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,11 +2,13 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="android:colorPrimary">@color/primary</item>
+        <item name="android:colorPrimaryDark">@color/primary_dark</item>
+        <item name="android:colorAccent">@color/accent</item>
     </style>
     <style name="label" parent="android:TextAppearance.Material.Caption"/>
     <style name="text" parent="android:TextAppearance.Material.Subhead"/>
     <style name="subheader" parent="android:TextAppearance.Material.Body2">
-        <item name="android:textColor">#757575</item>
+        <item name="android:textColor">@color/secondary_text</item>
     </style>
 </resources>
