--- a/app/src/main/res/layout/fragment_heart_rate.xml
+++ b/app/src/main/res/layout/fragment_heart_rate.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
@@ -10,4 +10,4 @@
             android:layout_height="match_parent"
             android:text="@string/hello_blank_fragment"/>
 
-</FrameLayout>
+</RelativeLayout>
