Added reference URL

--- a/app/src/main/res/values/body_sensor_location_values.xml
+++ b/app/src/main/res/values/body_sensor_location_values.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Values from https://developer.bluetooth.org/gatt/characteristics/Pages/CharacteristicViewer.aspx?u=org.bluetooth.characteristic.body_sensor_location.xml -->
     <string-array name="location_values">
         <item>(0) Other</item>
         <item>(1) Chest</item>
