--- a/app/src/main/res/layout/fragment_battery.xml
+++ b/app/src/main/res/layout/fragment_battery.xml
@@ -40,7 +40,7 @@
                     android:layout_height="wrap_content"/>
         </LinearLayout>
         <Button
-
+                android:id="@+id/button_batteryLevelNotify"
                 android:textColor="@color/accent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
