--- a/app/src/main/res/layout/fragment_health_thermometer.xml
+++ b/app/src/main/res/layout/fragment_health_thermometer.xml
@@ -1,5 +1,5 @@
 <!--
-  Copyright 2015 Google Inc. All rights reserved.
+  Copyright 2017 Google Inc. All rights reserved.
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -53,16 +53,13 @@
 
         <EditText
                 android:id="@+id/editText_temperatureMeasurementValue"
-                android:ems="3"
-                android:maxLength="3"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:layout_columnWeight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         <EditText
                 android:id="@+id/editText_measurementIntervalValue"
-                android:ems="4"
                 android:maxLength="5"
                 android:gravity="center"
                 android:inputType="number"
