Start/stop notifications only when user asks for it

--- a/app/src/main/res/layout/fragment_health_thermometer.xml
+++ b/app/src/main/res/layout/fragment_health_thermometer.xml
@@ -68,11 +68,13 @@
                 android:layout_height="wrap_content"/>
     </GridLayout>
 
-    <Switch
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="56dp"
-        android:id="@+id/switchNotifications"
+        android:id="@+id/textView_notifications"
         android:text="@string/sendingNotifications"
+        android:textAppearance="@style/text"
+        android:gravity="center_vertical"
         android:layout_below="@+id/gridLayout_characteristicsValues"
         android:layout_centerHorizontal="true"/>
 
